# ELMo-Rs

./: .gitignore  Cargo.toml  README.md  args.json
src/: config.rs  lib.rs  loader.rs  model.rs  preprocessor.rs  trainer.rs
tests/: integration_test.rs
