[package]
name = "elmo_trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "elmo_trainer"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
counter = "0.5.7"
itertools = "0.10.5"
rayon = "1.7.0"
serde_json = "1.0"
tch = "0.13.0"
